tdf#90153 DOCX import: fix default sw TextFrame roundtrip

The AnchorType of the shape was at-paragraph, which does not allow
line-level VertOrientRelation (which is correct, it would be undefined,
what line of the paragraph should be the used).

Fix this by changing the AnchorType to at-character in the line-level
case, which brings the filter in sync with the DOC one.

With this, import of a DOCX file that was created by inserting a
TextFrame into an empty document is roundtripped without shifting the
shape up considerably.

Change-Id: I6d85c38be859d6e730584f2349c857b87496a1d4